Add TelegramDataEnum, add main menu, send owner message feature

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,4 +1,5 @@
 bot.username=living_wage_bot
 bot.token=5715034453:AAGay-ZQdHda2fbmkCaY2-IR-xrt6eaiyJM
-
+telegram.owner.chat.id=1203217998
+telegram.owner.chat.id.2=366902969
 logging.level.ru.rusguardian=DEBUG
