Add sql, admin feature, message services, docker-compose prod properties

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,4 +8,8 @@ services:
     image: living-wage-bot
     network_mode: host
 
+    environment:
+      - "JAVA_OPTS="
+      - spring.profiles.active=prod
+
     restart: always
