--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,5 +1,24 @@
-bot.username=living_wage_bot
-bot.token=5715034453:AAGay-ZQdHda2fbmkCaY2-IR-xrt6eaiyJM
+logging.level.ru.rusguardian=DEBUG
+bot.username=pre_deploy_money_bot
+bot.token=5631832004:AAHpEW7ZWIbaV0YU3WiRGpIcrzgqJzQ8PXE
 telegram.owner.chat.id=1203217998
 telegram.owner.chat.id.2=366902969
-logging.level.ru.rusguardian=DEBUG
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/region_living_wage_db?currentSchema=ncs_bot
+spring.datasource.username=bot
+spring.datasource.password=33
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.hikari.connectionTimeout=20000
+spring.datasource.hikari.maximumPoolSize=5
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
+# Disable the second-level cache
+spring.jpa.properties.hibernate.cache.provider_class=org.hibernate.cache.NoCacheProvider"
+spring.jpa.properties.hibernate.cache.use_query_cache=false
+spring.jpa.properties.hibernate.cache.use_minimal_puts=false
+# In eager fetching, only join three tables deep if joins are used
+spring.jpa.properties.hibernate.max_fetch_depth=3
+# Print SQL to stdout, format it nicely
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
