Remove unused commands, refactor code, add consultation webApp button

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,6 +3,11 @@ bot.username=sotsialnyy_biznes_plan_bot
 bot.token=5592750330:AAFESuAF9xyzsughURdr1_FLZ52w_VcJz_o
 telegram.owner.chat.id=1203217998
 telegram.owner.chat.id.2=366902969
+
+telegram.url.preparedBP=https://biznes-plan-russia.ru/catalog
+telegram.url.individualBP=https://biznes-plan-russia.ru/bisnes-plan-individualny
+telegram.url.consultation=https://biznes-plan-russia.ru/consultacia
+
 spring.datasource.url=jdbc:postgresql://5.23.55.71:5432/region_living_wage_db?currentSchema=ncs_bot
 spring.datasource.username=bot
 spring.datasource.password=33
