--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -3,6 +3,11 @@ bot.username=pre_deploy_money_bot
 bot.token=5631832004:AAHpEW7ZWIbaV0YU3WiRGpIcrzgqJzQ8PXE
 telegram.owner.chat.id=1203217998
 telegram.owner.chat.id.2=366902969
+
+telegram.url.preparedBP=https://biznes-plan-russia.ru/catalog
+telegram.url.individualBP=https://biznes-plan-russia.ru/bisnes-plan-individualny
+telegram.url.consultation=https://biznes-plan-russia.ru/consultacia
+
 spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/region_living_wage_db?currentSchema=ncs_bot
 spring.datasource.username=bot
 spring.datasource.password=33
